--- a/main.css
+++ b/main.css
@@ -15,6 +15,17 @@ body {
     background-color: #db2e2b;
 }
 
+.overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: -1;
+}
+
 .centered-container {
     position: relative;
     display: flex;
@@ -40,6 +51,7 @@ body {
 
 p {
     font-size: 1.5rem;
+    margin: 1.5rem;
 }
 
 /* *****  NAV BAR  ***** */
@@ -49,9 +61,8 @@ p {
     padding-left: 1rem;
 }
 
-.main-nav {
+.nav-menu {
     display: flex;
-    justify-content: center;
     align-items: center;
     width: 100%;
     box-shadow: 0 20px 10px -8px #000000;  
@@ -67,7 +78,8 @@ p {
 }
 
 a {
-    font-size: 1.25rem;
+    /* display: block; */
+    font-size: 24px;
     color: #fff;
     text-decoration: none;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
@@ -77,6 +89,64 @@ li {
     list-style-type: none;
 }
 
+a:hover {
+    background-color: #890000;
+    padding: 8px;
+    transition: 0.3s ease-in-out;
+    border-radius: 5px;
+}
+
+/* This is for the hamburger button styles */
+.hamburger {
+    display: none; /* This was changed from none to block to flex */
+    position: absolute;
+    top: 1.5rem;
+    right: 1rem;
+    flex-direction: column;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+    transition: transform 0.3s ease-in-out;
+    z-index: 2;
+    }
+
+/* This is for the hamburger lines style */
+.hamburger_line {
+        display: block;
+        width: 30px;
+        height: 3px;
+        background-color: #fff;
+        border-radius: 2px;
+        transition: transform 0.3s ease-in-out;
+    }
+
+/* Initial state of hamburger lines */
+.hamburger .hamburger_line:nth-child(1) {
+        transform: translateY(0) rotate(0);
+    }
+
+.hamburger .hamburger_line:nth-child(2) {
+        transform: translateY(6px) rotate(0); /* how the lines are spaced */
+}
+.hamburger .hamburger_line:nth-child(3) {
+        transform: translateY(12px) rotate(0);
+}
+
+/* Active state of hamburger lines (when button is clicked), into X */
+.hamburger.open .hamburger_line:nth-child(1) {
+    transform: translateY(3px) rotate(45deg);
+}
+
+.hamburger.open .hamburger_line:nth-child(2) {
+    opacity: 0; /* This makes the middle line disappears when active */
+}
+
+.hamburger.open .hamburger_line:nth-child(3) {
+    transform: translateY(-3px) rotate(-45deg);
+}  
 
 /* *****  SECTIONS ***** */
 .main-pizza {
@@ -93,40 +163,71 @@ li {
     padding: 2rem;
     font-size: 1.6rem;
     background-color: #f8f8f8;
-    color: rgb(61, 60, 60);
+    color: #890000
 }
 
 /* The title needed color */
 .our_story_title {
-    color: rgb(61, 60, 60);
+    color: #890000;
 }
 /* To make the photo responsive and full-width */
 .max_photo {
-   max-width: 100%;
+    max-width: 100%;
 }
 
 
 #menu {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
     font-size: 1.6rem;
     color: #fff;
-    margin: 0 3rem 3rem;
+    margin: 2rem;
+    padding-top: 1.5rem;
 }
+
+.menu-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: left;
+    flex-wrap: wrap;
+    width: 100%;
+    text-align: left;
+}
+
+.menu-item {
+    display: flex;
+    flex-direction: column;
+    padding: 1.5rem;
+    margin: 0;
+    width: 50%;
+}
+
+.menu-item h3 {
+    font-size: 2rem;
+    /* align-self: flex-start; */
+    margin: 0;
+}
+
+.menu-item p {
+    font-size: 1.5rem;
+    /* margin-bottom: 2px; */
+    margin: 0;
+    text-align: left;
+}
+
+
 
 #hours-of-operation {
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
-    justify-content: center;
     padding: 2rem;
     font-size: 1.5rem;
     background-color: #f8f8f8;
     color: #e17f42;
 }
-
 
 #location {
     display: flex;
@@ -142,31 +243,26 @@ li {
 /* This will put the contact info on top of map in responsive mode */
 .container {
     display: flex;
-    flex-wrap: wrap;
-    color:#fff;
-    padding-top: 2rem;
+    flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
+    padding-top: 1rem;
 }
 
 .contact, .map {
-    margin: 0 3rem;
-    margin-right: 5rem;
-    padding: 2rem;
+    padding: 1.2rem;
 }
 
 /* Social Media Icons */
 
 .social-media-icons {
     display: flex;
-    justify-content: flex-start;
-    
+    justify-content: space-evenly;
+    padding: 1.5rem; 
 }
 .facebook, .instagram, .twitter {
     height: 30px;
-    width: 30px;
-    margin: 10px;
-    display: flex;
-    justify-content: center;
+    width: 30px;   
   }
 
 /* Footer */
@@ -179,18 +275,42 @@ footer {
     padding: 1rem;
 }
 
-.hamburger {
-    display: none;
-  }
-
 /*******  MEDIA QUERIES *******/
 @media (max-width: 768px) {
-    .main-nav__container {
+    /* Hide the default navigation links */
+    .nav__links {
         display: none;
+        width: 100%;
+        flex-direction: column; /* This is to make the links appear vertically */
+        justify-content: center; /* This centers the links horizontally */
+        position: absolute;
+        background-color: #db2e2b;
+        top: 100px; /* This helps to not block the logo */
+        left: 0;
+        z-index: 2; /* This helps to put the drop menu on top of the image */
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     }
+
+    /* When you click on button, the links appears */
+    .nav__links.active  {
+        display: flex;
+    } 
+    /* Adjust the hamburger button */
     .hamburger {
-        display: block;
-        cursor: pointer;
-        margin-right: 1rem;
-     }
+        display: flex;
+    }
+    /* This will shrink to one column in mobile view */
+    .menu-container {
+        display: flex;
+        flex-direction: column;
+       
+    }
+    .menu-item {
+        width: 100%;
+        margin: 0;
+        align-content: center;
+
+    }
+
+    
 }
