--- a/main.css
+++ b/main.css
@@ -44,10 +44,39 @@ body {
     text-shadow: 1px 1px 2px black;
     font-size: 80px;
     font-weight: bold;
-    /* Text weight */
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     /* Optional, to give the text a shadow for readability */
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    /* Fade-in Effect */
+    animation: fadeIn 5s;
+    -webkit-animation: fadeIn 3s;
+    -moz-animation: fadeIn 3s;
+    -o-animation: fadeIn 3s;
+    -ms-animation: fadeIn 3s;
 }
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+  
+  @-moz-keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+  
+  @-webkit-keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+  
+  @-o-keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+  
+  @-ms-keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
 
 p {
     font-size: 1.5rem;
@@ -65,24 +94,26 @@ p {
     display: flex;
     align-items: center;
     width: 100%;
-    box-shadow: 0 20px 10px -8px #000000;  
+    box-shadow: 0 20px 10px -8px #000000; 
 }
 
 .nav__links {
     display: flex;
-    justify-content: space-evenly;
     align-items: center;
     width: 100vw;
     padding: 0 2rem;
     flex-direction: row;
+    justify-content: space-evenly
 }
 
 a {
-    /* display: block; */
     font-size: 24px;
     color: #fff;
     text-decoration: none;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    padding: 3px;
+    transition: background-color 0.10s ease-in-out;
+    border-radius: 2px; 
 }
 
 li {
@@ -90,10 +121,9 @@ li {
 }
 
 a:hover {
+    padding: 4px;
     background-color: #890000;
-    padding: 8px;
-    transition: 0.3s ease-in-out;
-    border-radius: 5px;
+    /* transition: 0.10s ease-in-out; */
 }
 
 /* This is for the hamburger button styles */
@@ -159,11 +189,10 @@ a:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     padding: 2rem;
     font-size: 1.6rem;
     background-color: #f8f8f8;
-    color: #890000
+    color: #890000;
 }
 
 /* The title needed color */
@@ -175,7 +204,6 @@ a:hover {
     max-width: 100%;
 }
 
-
 #menu {
     display: flex;
     flex-direction: column;
@@ -183,7 +211,7 @@ a:hover {
     font-size: 1.6rem;
     color: #fff;
     margin: 2rem;
-    padding-top: 1.5rem;
+    padding-top: 1rem;
 }
 
 .menu-container {
@@ -201,6 +229,7 @@ a:hover {
     padding: 1.5rem;
     margin: 0;
     width: 50%;
+    /* align-items: center; */
 }
 
 .menu-item h3 {
@@ -216,8 +245,6 @@ a:hover {
     text-align: left;
 }
 
-
-
 #hours-of-operation {
     display: flex;
     flex-direction: column;
@@ -232,7 +259,6 @@ a:hover {
 #location {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     padding-top: 2rem;
     background-color: #1b5240;
@@ -257,12 +283,13 @@ a:hover {
 
 .social-media-icons {
     display: flex;
-    justify-content: space-evenly;
-    padding: 1.5rem; 
+    padding: 1rem;
+    align-items: center;
 }
 .facebook, .instagram, .twitter {
     height: 30px;
-    width: 30px;   
+    width: 30px;
+    margin-right: 0.8rem;
   }
 
 /* Footer */
@@ -290,7 +317,6 @@ footer {
         z-index: 2; /* This helps to put the drop menu on top of the image */
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     }
-
     /* When you click on button, the links appears */
     .nav__links.active  {
         display: flex;
@@ -303,7 +329,6 @@ footer {
     .menu-container {
         display: flex;
         flex-direction: column;
-       
     }
     .menu-item {
         width: 100%;
