--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@ html {
     margin: 0; 
     padding: 0; 
     box-sizing: border-box;
+    
 }
 
 body {
@@ -13,6 +14,9 @@ body {
     font-size: 1rem;
     line-height: 1.6;
     background-color: #db2e2b;
+    /* added this to make the page responsive */
+    overflow-x: hidden;
+    max-width: 100%;
 }
 
 .overlay {
