--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 * {   
@@ -14,9 +15,8 @@ body {
     font-size: 1rem;
     line-height: 1.6;
     background-color: #db2e2b;
-    /* added this to make the page responsive */
-    overflow-x: hidden;
-    max-width: 100%;
+    width: 100%;
+  
 }
 
 .overlay {
