--- a/main.css
+++ b/main.css
@@ -1,6 +1,5 @@
 html {
     scroll-behavior: smooth;
-    overflow-x: hidden;
 }
 
 * {   
@@ -10,12 +9,17 @@ html {
     
 }
 
+html, body {
+    max-height: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 body {
     font-family: 'Rancho', cursive;
     font-size: 1rem;
     line-height: 1.6;
     background-color: #db2e2b;
-    width: 100%;
   
 }
 
